# HugeMitu

./: AGENTS.md  README.md  direct_dat_waterfall_qc_v3_optimized.py  pyproject.toml
.github/workflows/: ci.yml
docs/: dat_contract.md  observation_manifest.md  streaming_qc.md
src/acs/: __init__.py
src/acs/cli/: __init__.py  main.py  qc.py
src/acs/io/: __init__.py  dat_reader.py  manifest.py  streaming.py
src/acs/preproc/: __init__.py  waterfall.py
src/acs/review/: __init__.py  qc.py
src/acs/search/: __init__.py
tests/: test_dat_reader.py  test_manifest.py  test_qc_outputs.py  test_smoke.py  test_streaming.py  test_waterfall.py
